# cppClassExercise

./: CMakeLists.txt  Employee.h  Manager.h  Person.h  Readme.md  employee.cpp  main.cpp  manager.cpp
